[project]
name = "fbenum"
version = "1.0.1"
description = "Library provides fallback enum functionality. Fully compatible with pydantic."
authors = [
    {name = "Vadim Suharnikov", email = "vsuharnikov@gmail.com"},
]
dependencies = [
    "pydantic-core>=2.14.6",
]
requires-python = ">=3.12"
homepage="https://github.com/vadim-su/fbenum"
readme = "README.md"
license = {text = "MIT"}
keywords = ["enum", "pydantic"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
package-type = "library"

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.4.4",
    "pydantic>=2.5.3",
    "ruff>=0.1.12",
    "pre-commit>=3.6.0",
]

[tool.autopep8]
max_line_length = 120

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.isort]
length-sort = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # isort
    "I",
]
